use \HFp and \HFtwo

--- a/finite.tex
+++ b/finite.tex
@@ -6,7 +6,7 @@
 \todo[inline]{Andy Senger correctly points out that ``stalkwise'' is the wrong word to use in all this (if we mean to be working in the Zariski topology, which surely we must).  The stalks are selected by maps from certain local rings; $E_\Gamma$ selects the formal neighborhood of the special point inside of this; and $K_\Gamma$ selects the special point itself.  Is ``fiberwise'' enough of a weasel word to get out of this?  In any case, make sure you clean up all instances of the word ``stalk''.}
 
 
-Our goal in this Case Study is to thoroughly examine one of the techniques from \Cref{UnorientedBordismChapter} that has not yet resurfaced: the idea that $H\F_2$--homology takes values in quasicoherent sheaves over some algebro-geometric object encoding the coaction of the dual Steenrod Hopf algebra.  We will find that this situation is quite generic: associated to mildly nice ring spectra $E$, we will construct a very rich algebro-geometric object $\context{E}$, called its context, such that $E$--homology sends spaces $X$ to sheaves $\context{E}(X)$ over $\context{E}$.  In still nicer situations, the difference between the $E_*$--module $E_*(X)$ and the sheaf $\context{E}(X)$ tracks exactly the analogue of the action of the dual Steenrod algebra, called the \textit{Hopf algebroid of stable $E$--homology cooperations}.  From this perspective, we will reinterpret Quillen's \Cref{QuillensTheorem} as giving a presentation \[\context{MUP} \xrightarrow{\simeq} \moduli{fg},\] where $\moduli{fg}$ is the \textit{moduli of formal groups}.  This indicates a program for studying periodic complex bordism, which we will spend the rest of this introduction outlining.
+Our goal in this Case Study is to thoroughly examine one of the techniques from \Cref{UnorientedBordismChapter} that has not yet resurfaced: the idea that $\HFtwo$--homology takes values in quasicoherent sheaves over some algebro-geometric object encoding the coaction of the dual Steenrod Hopf algebra.  We will find that this situation is quite generic: associated to mildly nice ring spectra $E$, we will construct a very rich algebro-geometric object $\context{E}$, called its context, such that $E$--homology sends spaces $X$ to sheaves $\context{E}(X)$ over $\context{E}$.  In still nicer situations, the difference between the $E_*$--module $E_*(X)$ and the sheaf $\context{E}(X)$ tracks exactly the analogue of the action of the dual Steenrod algebra, called the \textit{Hopf algebroid of stable $E$--homology cooperations}.  From this perspective, we will reinterpret Quillen's \Cref{QuillensTheorem} as giving a presentation \[\context{MUP} \xrightarrow{\simeq} \moduli{fg},\] where $\moduli{fg}$ is the \textit{moduli of formal groups}.  This indicates a program for studying periodic complex bordism, which we will spend the rest of this introduction outlining.
 
 Abstractly, one can hope to study any sheaf, including $\context{E}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of the context $\context{MUP}$, so that we can determine where to even look for those stalks.  However, even this is not really enough to get off the ground: the stalks of some sheaf can exhibit nearly arbitrary behavior.  In particular, there is little reason to expect the stalks of $\context{E}(X)$ to vary nicely with $X$.  Accordingly, given a map $f$ in the diagram
 \begin{center}
@@ -23,7 +23,7 @@ Given such a diagram where the diagonal arrow is flat, the functor \[R_0(X) := M
 
 \noindent In the course of proving this theorem, Landweber additionally devised a method to recognize flat maps.  Recall that a map $f\co Y \to X$ of schemes is flat exactly when for any closed subscheme $i\co A \to X$ with ideal sheaf $\mathcal I$ there is an exact sequence \[0 \to f^* \sheaf I \to f^* \sheaf O_X \to f^* i_* \sheaf O_A \to 0.\]  Landweber classified the closed subobjects of $\moduli{fg}$, thereby giving a precise list of conditions needed to check maps for flatness.
 
-This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava $E_\Gamma$--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava $K_\Gamma$--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: $K_\Gamma(X)$ may not actually compute the literal stalk of $\context{MUP}(X)$ at $\Gamma$, since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of $\context{MUP}(X)$.} of computing the stalk of $\context{MUP}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\context{H\F_2}$, as $\Spec \F_2$ is simply too small.}
+This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a geometric point is flat only in highly degenerate cases.  We will see that this can be repaired: the inclusion of the formal completion of a subobject is flat in friendly situations, and so we naturally become interested in the infinitesimal deformation spaces of the geometric points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called \textit{Morava $E_\Gamma$--theories}.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover \textit{Morava $K_\Gamma$--theory}, a \emph{homology theory}, which plays the role\footnote{To be clear: $K_\Gamma(X)$ may not actually compute the literal stalk of $\context{MUP}(X)$ at $\Gamma$, since the homotopical operation of quotienting out the regular sequence is potentially sensitive to torsion sections of $\context{MUP}(X)$.} of computing the stalk of $\context{MUP}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\context{\HFtwo}$, as $\Spec \F_2$ is simply too small.}
 
 We have thus assembled a task list:
 \begin{itemize}
@@ -44,7 +44,7 @@ These will occupy our attention for the first half of this Case Study.  In the s
 
 \todo{You are sloppy about $EP_0$ versus $E_*$ in this lecture.  Pretty sure you mean to choose $EP_0$ and be done with it.}
 
-In \Cref{HopfAlgebraLecture} we took for granted the $H\F_2$--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut(\G_a); \widetilde{H\F_2P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on $H\F_2P_0 X$ with an action of $\InternalAut{\G_a}$ on its associated quasicoherent sheaf over $\Spec \F_2$.  Our goal in this Lecture is to revise this tool to work for other ring spectra $E$ and target spectra $X$, eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X.\]  In particular, we will encounter along the way the object ``$\context{E}$'' envisioned in the introduction to this Case Study.
+In \Cref{HopfAlgebraLecture} we took for granted the $\HFtwo$--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut(\G_a); \widetilde{\HFtwo P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on $\HFtwo P_0 X$ with an action of $\InternalAut{\G_a}$ on its associated quasicoherent sheaf over $\Spec \F_2$.  Our goal in this Lecture is to revise this tool to work for other ring spectra $E$ and target spectra $X$, eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X.\]  In particular, we will encounter along the way the object ``$\context{E}$'' envisioned in the introduction to this Case Study.
 
 At a maximum level of vagueness, we are seeking a process by which its homotopy $\pi_* X$ can be recovered from the $E$--homology groups $E_* X$.  Generally speaking, spectral sequences arise from taking homotopy groups of a topological version of this same recovery process---i.e., recovering the spectrum $X$ from the spectrum $E \sm X$.  Recognizing that $X$ can be thought of as an $\S$--module and $E \sm X$ can be thought of as its base change to an $E$--module, we are inspired to double back and consider as inspiration an algebraic analogue of the same situation.  Given a ring map $f\co R \to S$ and an $S$--module $N$, Grothendieck's framework of \textit{(faithfully flat) descent} addresses the following questions:
 \begin{enumerate}
@@ -144,7 +144,7 @@ and note that an $R$--module $M$ gives rise to a cosimplicial left--$\mathcal D_
 For $f\co \Z \to \F_p$ and $M$ a connective complex of $\Z$--modules, the totalization $\Tot \mathcal D_{Hf}(HM)$ recovers the $p$--completion of $M$.
 \end{lemma}
 \begin{proof}[Proof sketch]
-The Hurewicz map $H\Z \to H\F_p$ kills $(p) \subseteq \pi_0 H\Z$, and we further calculate \[H\F_p \sm_{H\Z} H\F_p \simeq H\F_p \vee \Susp H\F_p\] to be connective.  Combining these facts shows that the filtration of $\mathcal D_{Hf}(HM)$ gives the $p$--adic filtration of the homotopy groups $\pi_* HM$.  If $\pi_* HM$ is already $p$--complete, then the reassembly map $HM \to \Tot \mathcal D_{Hf}(HM)$ is a weak equivalence.
+The Hurewicz map $H\Z \to \HFp$ kills $(p) \subseteq \pi_0 H\Z$, and we further calculate \[\HFp \sm_{H\Z} \HFp \simeq \HFp \vee \Susp \HFp\] to be connective.  Combining these facts shows that the filtration of $\mathcal D_{Hf}(HM)$ gives the $p$--adic filtration of the homotopy groups $\pi_* HM$.  If $\pi_* HM$ is already $p$--complete, then the reassembly map $HM \to \Tot \mathcal D_{Hf}(HM)$ is a weak equivalence.
 \end{proof}
 
 We are now close enough to our original situation that we can make the last leap: rather than studying a map $Hf\co HR \to HS$, we instead have the unit map $\eta\co \S \to E$ associated to some ring spectrum $E$.  Fixing a target spectrum $X$, we define the analogue of the descent object:
@@ -229,7 +229,7 @@ In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebra descent
 \end{remark}
 
 \begin{example}
-Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $H\F_2P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  This grants us access to a description of the context for $H\F_2$: \[\context{H\F_2P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
+Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $\HFtwo P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  This grants us access to a description of the context for $\HFtwo$: \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
@@ -644,7 +644,7 @@ The complementary open substack of dimension $d$ is harder to describe.  From fi
 \end{remark}
 
 \begin{remark}[{cf.\ \cite[Section 12]{StricklandFGNotes} and \cite[Remark 13.9]{LurieChromaticCourseNotes}}]
-Specialize now to the case of a field $k$ of characteristic $p$.  Since the additive group law has vanishing $p$--series and is $p$--typical, a consequence of \Cref{PSeriesDetermines} is that \emph{every} $p$--typical group law with vanishing $p$--series is exactly equal to $\G_a$, and in fact any formal group law with vanishing $p$--series $p$--typifies exactly to $\G_a$.  This connects several ideas we have seen so far: the presentation of formal group laws with logarithms in \Cref{CalculationOfAutGaActionOnMO}, the presentation of the context $\context{MOP}$ in \Cref{ContextOfMOPExample}, and the Hurewicz image of $MU_*$ in $H\F_p{}_* MU$ in \Cref{HZMUCarriesALog}.
+Specialize now to the case of a field $k$ of characteristic $p$.  Since the additive group law has vanishing $p$--series and is $p$--typical, a consequence of \Cref{PSeriesDetermines} is that \emph{every} $p$--typical group law with vanishing $p$--series is exactly equal to $\G_a$, and in fact any formal group law with vanishing $p$--series $p$--typifies exactly to $\G_a$.  This connects several ideas we have seen so far: the presentation of formal group laws with logarithms in \Cref{CalculationOfAutGaActionOnMO}, the presentation of the context $\context{MOP}$ in \Cref{ContextOfMOPExample}, and the Hurewicz image of $MU_*$ in $\HFp_* MU$ in \Cref{HZMUCarriesALog}.
 \end{remark}
 
 \begin{remark}
@@ -885,7 +885,7 @@ Having accomplished all our major goals, we close our algebraic analysis of $\mo
 %Label the heights of the formal group, and indicate the behavior of the height function.
 %Draw a ``zoomed in'' version of the height $1$ geometric point, indicating the existence of many non-closed field points covering it, or ``Forms of $\G_m$''.
 %Draw ``attaching data'' between the different formal neighborhoods, indicating that they are nontrivially connected to one another.  The idea should be something like projective space, where the open height-dropping condition determines an ``around the edges'' map for the closed height-raising condition.
-%Indicate (perhaps in a different color) the topological analogues of everything in the picture: $H\Z_{(p)}$, $H\F_p$, $H\Q$, $K_\Gamma$, $E(d)$, $P(d)$, $E_\Gamma$, $BP_{(p)}$, \ldots.
+%Indicate (perhaps in a different color) the topological analogues of everything in the picture: $H\Z_{(p)}$, $\HFp$, $H\Q$, $K_\Gamma$, $E(d)$, $P(d)$, $E_\Gamma$, $BP_{(p)}$, \ldots.
 %Include a legend: dots for geometric points, fuzz for deformation neighborhoods, \ldots.
 %
 %\vspace{\baselineskip}
@@ -970,7 +970,7 @@ E_\Gamma / (p) \xrightarrow{u_1} E_\Gamma / (p) & \to E_\Gamma / (p, u_1), \\
 & \vdots \\
 E_\Gamma / I_{d-1} \xrightarrow{u_{d-1}} E_\Gamma / I_{d-1} & \to E_\Gamma / I_d.
 \end{align*}
-This determines a spectrum $K_\Gamma = E_\Gamma / I_d$, and hence determines a homology theory called \textit{the Morava $K$--theory for $\Gamma$}.  In the case where $\Gamma$ comes from the Honda $p$--typical formal group law (of height $d$), this spectrum is often written as $K(d)$.  As an edge case, we also set $K(0) = H\Q$ and $K(\infty) = H\F_p$.\footnote{By \Cref{FGpsOverAlgClosedFields} and \Cref{FieldSpectraAreKTheories} to follow, it often suffices to consider just these spectra $K(d)$ to make statements about all $K_\Gamma$.  With more care, it even often suffices to consider $d \ne \infty$.}
+This determines a spectrum $K_\Gamma = E_\Gamma / I_d$, and hence determines a homology theory called \textit{the Morava $K$--theory for $\Gamma$}.  In the case where $\Gamma$ comes from the Honda $p$--typical formal group law (of height $d$), this spectrum is often written as $K(d)$.  As an edge case, we also set $K(0) = H\Q$ and $K(\infty) = \HFp$.\footnote{By \Cref{FGpsOverAlgClosedFields} and \Cref{FieldSpectraAreKTheories} to follow, it often suffices to consider just these spectra $K(d)$ to make statements about all $K_\Gamma$.  With more care, it even often suffices to consider $d \ne \infty$.}
 \item More delicately, there is a version of Morava $E$--theory which takes into account the formal topology on $(\moduli{fg})^\wedge_\Gamma$, called \textit{continuous Morava $E$--theory}.  It is defined by the pro-system $\{E_\Gamma(X) / u^I\}$, where $I$ ranges over multi-indices and the quotient is again given by cofiber sequences.
 \item There is also a homology theory associated to the closed substack $\moduli{fg}^{\ge d}$.  Since $I_d = (p, v_1, \ldots, v_{d-1})$ is generated by a regular sequence on $BPP_0$, we can directly define the spectrum $P(d)P$ by a regular quotient: \[P(d)P = BP / (p, v_1, \ldots, v_{d-1}).\]  This spectrum does have the property $P(d)P_0 = BPP_0 / I_d$ on coefficient rings, but $P(d)P_0(X) = BPP_0(X) / I_d$ \emph{only} when $I_d$ forms a regular sequence on $BPP_0(X)$---which is reasonably rare among the cases of interest.
 \end{itemize}
@@ -1029,7 +1029,7 @@ If $K(d)_* E = 0$ for some $d$, then the non-nilpotent unit map $\S \to K(d)$ li
 
 In the other direction, suppose that for every $d$ we have $K(d)_* E \ne 0$.  Because $K(d)_*$ is a field, it follows by picking a basis of $K(d)_* E$ that $K(d) \sm E$ is a nonempty wedge of suspensions of $K(d)$.  So, for $\alpha \in \pi_* R$, if $E_* \alpha = 0$ then $(K(d) \sm E)_* \alpha = 0$ and hence $K(d)_* \alpha = 0$.  So, we need to show that if $K(d)_* \alpha = 0$ for all $n$ and all $p$ then $\alpha$ is nilpotent.  Taking \Cref{DevinatzHopkinsSmith} as given, it would suffice to show merely that $MU_* \alpha$ is nilpotent.  This is equivalent to showing that the ring spectrum $MU \sm R[\alpha^{-1}]$ is contractible or that the unit map is null: \[\S \to MU \sm R[\alpha^{-1}].\]
 
-A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{Specifically, it is immediate that $MU_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}  Taking $X = R[\alpha^{-1}]$, we have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq H\F_p \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha^{-1}]$ with $d \gg 0$.
+A nontrivial result of Johnson and Wilson shows that if $MU_* X = 0$, then for any $d$ we have $K([0, d])_* X = 0$ and $P(d+1)_* X = 0$.\footnote{Specifically, it is immediate that $MU_* X = 0$ forces $P(d+1)_* X = 0$ and $v_{d'}^{-1} P(d')_*(X) = 0$ for all $d' < d$.  What's nontrivial is showing that $v_{d'}^{-1} P(d')_*(X) = 0$ if and only if $K(d')_*(X) = 0$~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}  Taking $X = R[\alpha^{-1}]$, we have assumed all of these are zero except for $P(d+1)$.  But $\colim_d P(d+1) \simeq \HFp \simeq K(\infty)$, and $\S \to K(\infty) \sm R[\alpha^{-1}]$ is assumed to be null as well.  By compactness of $\S$, that null-homotopy factors through some finite stage $P(d+1) \sm R[\alpha^{-1}]$ with $d \gg 0$.
 \end{proof}
 
 \Cref{LocalNilpotenceDetection} has the following consequence, which speaks to the primacy of both the chromatic program and these results.
@@ -1052,7 +1052,7 @@ In the $2$--periodic setting we've become accustomed to, the analogue of \Cref{F
 \end{remark}
 
 \begin{remark}
-In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of $MU$ given in \Cref{OriginalDefnOfBordism}, the edge cases of $K(0) = H\Q$ and $K(\infty) = H\F_p$, and the claimed primacy of these methods, we might wonder if there is any geometric interpretation of the field theories $K(d)$ for $0 < d < \infty$.  To date, this is a completely open question and the subject of intense research.
+In service of \Cref{ExampleOfMoravasTheoriesAtGm}, the geometric definition of $MU$ given in \Cref{OriginalDefnOfBordism}, the edge cases of $K(0) = H\Q$ and $K(\infty) = \HFp$, and the claimed primacy of these methods, we might wonder if there is any geometric interpretation of the field theories $K(d)$ for $0 < d < \infty$.  To date, this is a completely open question and the subject of intense research.
 \end{remark}
 
 We're now well-situated to address Ravenel's question about finite spectra and periodic self-maps.  The key observation is that spectra admitting such self-maps are closed under some natural operations, leading to the following definition:
@@ -1124,7 +1124,7 @@ These maps are guaranteed by very careful study of Adams spectral sequences.
 
 They therefore conclude the strongest possible positive response to Ravenel's conjectures.  Not only can we continue the sequence \[\S, \; \S/p, \; \S/(p, v), \; \ldots,\] but in fact \emph{any} finite spectrum admits an (essentially unique) interesting periodic self-map.  This is maybe the most remarkable of the statements: although Nishida's theorem initially led us to think of periodic self-maps as rare, they are in fact ubiquitous.  Additionally, we learned that the shift\footnote{This is sometimes referred to as the ``wavelength'' in the chromatic analogy.} of this self-map is determined by the first nonvanishing $K(d)$--homology, giving an effective detection tool.  Finally, all such periodicity shifts arise: for any $d$, there is a spectrum admitting a $v_d$--self--map but not a $v_{d-1}$--self--map.
 
-\todo{In either this section, near the definition of chromatic homology theories, or in the next section, where the acyclicity of $K(d) \sm K(d')$ is stated, we should discuss $H\F_p{}_* BP$ (perhaps in terms of $H\F_p{}_* MU$ but certainly in terms of a quotient algebra of the dual Steenrod algebra), as well as the utility of the Adams spectral sequence in computing extraordinary homology theories from ordinary ones, and the role that Bocksteins play in those calculations (and, in particular, where all the $\tau_j$ operators went in the deformation from $H\F_p$ to $BP$).}
+\todo{In either this section, near the definition of chromatic homology theories, or in the next section, where the acyclicity of $K(d) \sm K(d')$ is stated, we should discuss $\HFp_* BP$ (perhaps in terms of $\HFp_* MU$ but certainly in terms of a quotient algebra of the dual Steenrod algebra), as well as the utility of the Adams spectral sequence in computing extraordinary homology theories from ordinary ones, and the role that Bocksteins play in those calculations (and, in particular, where all the $\tau_j$ operators went in the deformation from $\HFp$ to $BP$).}
 
 
 
@@ -1340,7 +1340,7 @@ In the broader literature, the phrase ``Greek letter elements'' typically refers
 \end{remark}
 
 \todo{Section 24 of FPFP has some facts about the behavior of the Morava stabilizer on Lubin--Tate space.  It could be nice to include this, perhaps even with proofs.}
-\todo{Another fun fact is that because $p$--local finite spectra $F$ are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $H\F_p \to F$ (and, in particular, the Spanier--Whitehead dual of $H\F_p$ is null).  (In fact, the Hovey paper \textit{Bousfield Localization Functors and Hopkins' Chromatic Splitting Conjecture} shows that they are local for any properly infinite collection of Morava $K$--theories.)}
+\todo{Another fun fact is that because $p$--local finite spectra $F$ are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $\HFp \to F$ (and, in particular, the Spanier--Whitehead dual of $\HFp$ is null).  (In fact, the Hovey paper \textit{Bousfield Localization Functors and Hopkins' Chromatic Splitting Conjecture} shows that they are local for any properly infinite collection of Morava $K$--theories.)}
 \todo{Danny was asking some interesting questions about the relationships between the $t_i$ and the $h_j$ elements of the Adams spectral sequence.  You could try to explain some of this comparison and how you get the Hopf invariant one theorem out of it.}
 \todo{Danny was also asking about the role of the $T(j)$ spectra, which are pretty cool.  They (and their utility as described in \textit{From Spectra to Stacks}) might live in a Remark somewhere.}
 \todo{Tobi had a cute argument: the cofiber of $\bigvee_n K(n) \to \prod_n K(n)$ is concentrated in degree $0$ (hence Eilenberg--Mac Lane) because each nonzero homotopy degree receives contributions from only finitely many $K(n)$ spectra.  I'm not sure what this is good for, but it's a neat fact.  (It's important to work with the minimally periodic spectra here.)}
