--- a/powerops.tex
+++ b/powerops.tex
@@ -545,7 +545,7 @@ We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for 
 \todo{Don Davis has a \textit{Handbook of Algebraic Topology} chapter on unstable $v_1$--periodic homotopy of spheres.}
 \todo{Baker's POWER OPERATIONS AND COACTIONS IN HIGHLY COMMUTATIVE HOMOLOGY THEORIES seems like a nice place to learn about these things. He advertises some interaction with the traditional context story, which is appealing, and he mostly treats the case of ordinary homology, which we probably ought to spend a section on.}
 \todo{FPFP Example 4.6 is a nice summary of a main result of HKR character theory.  Compare also Example 4.8.}
-\todo{If you can figure out what Hood was doing with Dyer--Lashof operations in $H\F_2$ and the logarithm/exponential coordinates, that'd be pretty cool to include.  (Neil has a Steenrod Algebra note that brushes against this.)}
+\todo{If you can figure out what Hood was doing with Dyer--Lashof operations in $\HFtwo$ and the logarithm/exponential coordinates, that'd be pretty cool to include.  (Neil has a Steenrod Algebra note that brushes against this.)}
 \todo{Describe the action by $GL_n(\Z_p)$. (Hint at the action by $M_{n \times n}(\Z_p)$ with $\det \ne 0$.)}
 
 
