--- a/preamble.tex
+++ b/preamble.tex
@@ -288,6 +288,7 @@
 
 \makeatletter
 \protected\def\HFp{H\mathbb{F}_p\@ifnextchar_{{}}{}}
+\protected\def\HFtwo{H\mathbb{F}_2\@ifnextchar_{{}}{}}
 \makeatother
 
 % from hood chatham: place relevant spectral sequences on verso-recto pairs
