--- a/cooperations.tex
+++ b/cooperations.tex
@@ -147,7 +147,7 @@ d^r(x \circ y) = (d^r x) \circ y. \qedhere
 \end{lemma}
 \noindent This Lemma is obscenely useful: it means that differentials can be transported \emph{between spectral sequences} for classes which can be decomposed as $\circ$--products.  This means that the bottom spectral sequence (i.e., the case $j = 0$) exerts a large amount of control over the others---and this spectral sequence often turns out to be very computable.
 
-We now turn to concrete computations for $E = \HFtwo$ and $F = \HFtwo$.  To ground the induction, we will consider the first spectral sequence \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo{}_* B\F_2.\]  Using that $\RP^\infty$ gives a model for $B\F_2$, we use \Cref{HF2RPinftyExample} to analyze the target of this spectral sequence: as an $\F_2$--module, we have already demonstrated an isomorphism \[\HFtwo_* B\F_2 \cong \F_2\{a_j \mid j \ge 0\}.\]  Using our further computation in \Cref{RPExampleFaulty}, we can also give a presentation of the Hopf algebra structure on $\HFtwo_* B\F_2$: it is dual to the primitively-generated polynomial algebra on a single class, so forms a divided power algebra on a single class which we will denote by $a_{()}$.  In characteristic $2$, this decomposes as \[\HFtwo_* B\F_2 \cong \Gamma[a_{()}] \cong \bigotimes_{j=0}^\infty \F_2[a_{(j)}] / a_{(j)}^2,\] where we have written $a_{(j)}$ for $a_{()}^{[2^j]}$ in the divided power structure.
+We now turn to concrete computations for $E = \HFtwo$ and $F = \HFtwo$.  To ground the induction, we will consider the first spectral sequence \[\Tor^{\HFtwo_*(\F_2)}_{*, *}(\F_2, \F_2) \Rightarrow \HFtwo_* B\F_2.\]  Using that $\RP^\infty$ gives a model for $B\F_2$, we use \Cref{HF2RPinftyExample} to analyze the target of this spectral sequence: as an $\F_2$--module, we have already demonstrated an isomorphism \[\HFtwo_* B\F_2 \cong \F_2\{a_j \mid j \ge 0\}.\]  Using our further computation in \Cref{RPExampleFaulty}, we can also give a presentation of the Hopf algebra structure on $\HFtwo_* B\F_2$: it is dual to the primitively-generated polynomial algebra on a single class, so forms a divided power algebra on a single class which we will denote by $a_{()}$.  In characteristic $2$, this decomposes as \[\HFtwo_* B\F_2 \cong \Gamma[a_{()}] \cong \bigotimes_{j=0}^\infty \F_2[a_{(j)}] / a_{(j)}^2,\] where we have written $a_{(j)}$ for $a_{()}^{[2^j]}$ in the divided power structure.
 
 \begin{corollary}
 This $\Tor$ spectral sequence collapses at the $E^2$--page.
@@ -753,7 +753,7 @@ Having gotten some feel for the behavior and the usefulness of the Dieudonn\'e f
 \item Homothety: given a scalar $a \in A$, we define $\theta_a \gamma(t) = \gamma(a \cdot t)$.
 \item Verschiebung: given an integer $n \ge 1$, we define $V_n \gamma(t) = \gamma(t^n)$.
 \item Arithmetic: given two curves $\gamma_1$ and $\gamma_2$, we can use the group law on $\G$ to define $\gamma_1 +_{\G} \gamma_2$.  Moreover, given $\ell \in \Z$, the $\ell$--fold sum in $\G$ gives an operator \[\ell \cdot \gamma = \overset{\text{$\ell$ times}}{\overbrace{\gamma +_{\G} \cdots +_{\G} \gamma}}.\]  This extends to an action by $\ell \in \W_p(k)$.
-\item Frobenius: given an integer $n \ge 1$, we define \[F_n \gamma(t) = \sum_{i=1}^n{}_{\G} \gamma(\zeta_n t^{1/n}),\] where $\zeta_{n}$ is an $n${\th} root of unity.  (This formula is invariant under permuting the root of unity chosen, so determines a curve defined over the original ground ring by Galois descent.)
+\item Frobenius: given an integer $n \ge 1$, we define \[F_n \gamma(t) = \sumG_{i=1}^n \gamma(\zeta_n t^{1/n}),\] where $\zeta_{n}$ is an $n${\th} root of unity.  (This formula is invariant under permuting the root of unity chosen, so determines a curve defined over the original ground ring by Galois descent.)
 \end{itemize}
 
 \begin{definition}[{cf.\ \Cref{DefnpTypicalLog}, \Cref{pTypicalityInGeneral}}]
