--- a/mo.tex
+++ b/mo.tex
@@ -806,7 +806,7 @@ Just using that $\pi_* MO$ is connective and $\pi_0 MO = \F_2$, we can produce a
 We are also in a position to understand the stable cooperations $MO_* MO$.  We may rewrite this as
 \begin{align*}
 MO_* MO & = \pi_* MO \sm MO = \pi_* MO \sm_{\HFtwo} (\HFtwo \sm MO) \\
-& \Leftarrow \Tor^{\F_2}_{*, *}(MO_*, \HFtwo{}_* MO) = MO_* \otimes_{\F_2} \HFtwo{}_* MO.
+& \Leftarrow \Tor^{\F_2}_{*, *}(MO_*, \HFtwo_* MO) = MO_* \otimes_{\F_2} \HFtwo_* MO.
 \end{align*}
 Hence, a point in $\Spec MO_* MO$ consists of a pair of points in $\Spec MO_*$ and $\Spec \HFtwo_* MO$, which we have already identified respectively as formal group laws with vanishing $2$--series, a property, and formal group laws with specified logarithms, data.  This description can be amplified to capture all of the structure maps: a formal group law with vanishing $2$--series admits a logarithm, which indicates how the composition and conjugation maps of \Cref{FHGivesComodules} behave.
 \end{remark}
