--- a/sumfgl.tex
+++ b/sumfgl.tex
@@ -1,3 +1,4 @@
+\makeatletter
 \def\mathllap{\mathpalette\mathllapinternal}
 \def\mathrlap{\mathpalette\mathrlapinternal}
 \def\mathllapinternal#1#2{\llap{$\mathsurround=0pt#1{#2}$}}
@@ -16,7 +17,9 @@
     \egroup
     \mathop{\box\sumfgl@box}
 }
-\def\sumF{\sumfgl{F}}
-\def\sumG{\sumfgl{G}}
+\def\sumphi{\sumfgl{\phi}}
+\def\sumG{\sumfgl{\G}}
+\def\sumGamma{\sumfgl{\Gamma}}
+\makeatother
 
 
