a few more acknowledgements changes

--- a/preface.tex
+++ b/preface.tex
@@ -9,9 +9,9 @@
 
 This book owes an incredible amount to an incredible number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe a very large debt to each of Matthew Ando, Michael Hopkins, and Neil Strickland, for having shown me such individual attention and care as well as for having originally worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deeply friendly nature that he showed me during those first couple of years at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging, introducing me to an entire mathematical worldview.  Among other things, Neil shared with me a note of his that would eventually blossom into my thesis problem, which is an awfully nice gift to have given.
 
-Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my PhD adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley and asked to be his student, I had already drunk homotopical Kool-Aid well in excess of the median lethal dose, but he masked his frustration well and endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields, emphasizing that math done in isolation and without maximal connection to other mathematicians is math wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.  (It is up to the reader to determine whether I have actually succeeded at this, and any failure of mine in this regard can't possibly be visited on him.)
+Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my PhD adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley and asked to be his student, I had already drunk well past the LD50 for homotopical Kool-Aid, but he masked his frustration well and endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, to speak understandably, and to highlight the connections with nearby fields, emphasizing that math done in isolation and without maximal connection to other mathematicians is math wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.  (It is up to the reader to determine whether I have actually succeeded at this, and any failure of mine in this regard can't possibly be visited on him.)
 
-More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role both in the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time, time, and time again in hopes that I would someday get it.
+More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time, time, and time again in hopes that I would someday get it.
 
 The bulk of this book began as a set of lecture notes for a topics course\footnote{MATH 278 (159627).} I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.  The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.  In particular, this was the first time I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.  The book also draws on feedback from lecturing in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester program in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.  Finally, my thoughts about the material in this book and its presentation were further refined by many, many, many conversations with other students at UC--Berkeley, primarily: my undergraduate readers Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, had to put up with listening to me for years on end.
 
