--- a/preface.tex
+++ b/preface.tex
@@ -17,7 +17,7 @@ The bulk of this book began as a set of lecture notes for a topics course\footno
 
 This book also draws on a lot of unpublished material.  The topology community gets some flak for this, especially among graduate students who aren't fully cognizant of the effort it takes to bring anything to publication---especially anything long.  Rather, I think it is to topologists' credit that this unpublished material is made available anyway, essentially without redaction.  In no order at all, reference materials of this sort that have influenced this book include: Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Charles Rezk's \textit{Supplementary Notes for Math 512}, as well as his \textit{Notes on the Hopkins--Miller Theorem}, and his \textit{Elliptic Cohomology and Elliptic Curves}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena} as well as his \textit{Formal Schemes for $K$--Theory Spaces}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}\footnote{This earlier version contains a lot of information that didn't make it to publication, essentially because it is too dense and alien to tell whether it is secretly circular.  Once the reader already has the sketch of the argument established, this is a truly invaluable resource to go back and re-read.}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures\footnote{There is a bit of a funny story here: none of the authors of this article could find their own preprint, and it just so happened that one of their old graduate students had kept a copy.  In their defense, two decades had passed---but that only makes Gerd's organizational skills more heroic.}.  I would not have understood the material presented here without access to these resources.
 
-In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{sseqpages}), Dexter Chua (who helped translate the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence that I speak about it and his further help in preparing that talk).
+In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{sseqpages}), Dexter Chua\todo{Seems to suggest I was at Harvard} (who helped translate the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence that I speak about it and his further help in preparing that talk).
 
 More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathews}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt honor-bound to keep telling them things they didn't already know, and despite my best efforts to keep ahead of them I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a very bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.
 
