--- a/mo.tex
+++ b/mo.tex
@@ -393,7 +393,7 @@ x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
 Applying \Cref{GradedAndGmEquivAgree} to this coaction thus selects the original degree $n$ classes.
 \end{proof}
 
-Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo^* \RP^\infty \otimes \HFtwo^* \RP^\infty \leftarrow \HFtwo^* \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
+Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
 The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2).\]
@@ -402,9 +402,9 @@ The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the unive
 Given a point $f \in (\Spec \mathcal AP_0)(T)$, we extract such a series by setting \[\lambda^*_f(x) = \sum_{j=0}^\infty f(\xi_j) x^{2^j} \in T\ps{x}.\]  Conversely, any series $\lambda(x)$ satisfying this homomorphism property must have nonzero terms appearing only in integer powers of $2$, and hence we can construct a point $f$ by declaring that $f$ sends $\xi_j$ to the $(2^j)${\th} coefficient of $\lambda$.
 \end{proof}
 
-We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{\HFtwo}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{\HFtwo}$ Milnor's technique was to consider the ind-system $\{\RP^n_{\HFtwo}\}_{n=0}^\infty$ of finite affine schemes.  We will record this as our technique to handle general infinite complexes:
+We close our discussion by codifying what Milnor did when he stabilized against $n$.  Each $\RP^n_{\HFtwo P}$ is a finite affine scheme, and to make sense of the object $\RP^\infty_{\HFtwo P}$ Milnor's technique was to consider the ind-system $\{\RP^n_{\HFtwo P}\}_{n=0}^\infty$ of finite affine schemes.  We will record this as our technique to handle general infinite complexes:
 \begin{definition}[{cf.\ \Cref{FullDefnOfXE}}]\label{FullDefnOfXHF2}
-When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{\HFtwo}$ to be the ind-system $\{X^{(n)}_{\HFtwo}\}_{n=0}^\infty$ of finite schemes.
+When $X$ is an infinite complex, filter it by its subskeleta $X^{(n)}$ and define $X_{\HFtwo P}$ to be the ind-system $\{X^{(n)}_{\HFtwo P}\}_{n=0}^\infty$ of finite schemes.
 \end{definition}
 
 This choice to follow Milnor resolves our uncertainty about the topological example from last time:
@@ -414,7 +414,7 @@ Write $\G_a$ for the ind-system $\mathbb A^{1, (n)}$ with the group scheme struc
 \item Algebraic: The set $\G_a(T)$ consists of all nilpotent elements in $T$.  The sum of two nilpotent elements of orders $n$ and $m$ is guaranteed to itself be nilpotent with order at most $n+m$.
 \item Topological: There is a factorization of the multiplication map on $\RP^\infty$ as $\RP^n \times \RP^m \to \RP^{n+m}$ purely for dimensional reasons.
 \end{enumerate}
-As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo} \cong \G_a.\]
+As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo P} \cong \G_a.\]
 \end{example}
 
 \begin{example}\label{FirstAppearanceOfInternalAut}
@@ -439,7 +439,7 @@ Remembering the slogan \[\Spec \mathcal AP_0 \cong \InternalAut \G_a\] also make
 Our interest in $\colim_n \HFtwo P^0 \RP^n$ is the culmination of quite a lot of definitions in basic algebraic topology, quietly lurking in the background.  For instance, infinite CW-complexes are \emph{defined} to have the weak topology coming from their skeleta, so that a continuous map off of such an infinite complex is continuous if and only if it is the colimit of a compatible system of maps.  The cohomology of an infinite complex comes with a Milnor sequence, and if we arrange the situation so as not to encounter a $\lim^1$ term, it is exactly equal to the limit of the cohomology groups of the finite stages---but because all maps between complexes filter through the finite stages, all the induced maps on cohomology are necessarily continuous for the adic topology.  This is exactly the phenomenon we are capturing (or, indeed, enforcing in algebra) when we track the system of finite schemes $\{\RP^n_{\HFtwo P}\}_{n=0}^\infty$.
 \end{remark}
 
-In summary, the formula $\RP^\infty_{\HFtwo} \cong \G_a$ is meant to point out that this language of formal schemes has an extremely good compression ratio---you can fit a lot of information into a very tiny space.  This formula simultaneously encodes the cohomology ring of $\RP^\infty$ as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with $\InternalAut{\G_a}$.  As a separate wonder, it is also remarkable that there is a single cohomological calculation---that of $\RP^\infty_{\HFtwo}$---which exerts such enormous control over mod--$2$ cohomology itself (e.g., the entire structure of the dual Steenrod algebra).  This will turn out to be a surprisingly common occurrence as we progress.
+In summary, the formula $\RP^\infty_{\HFtwo P} \cong \G_a$ is meant to point out that this language of formal schemes has an extremely good compression ratio---you can fit a lot of information into a very tiny space.  This formula simultaneously encodes the cohomology ring of $\RP^\infty$ as the formal scheme, its diagonal as the group scheme structure, and the coaction of the dual Steenrod algebra by the identification with $\InternalAut{\G_a}$.  As a separate wonder, it is also remarkable that there is a single cohomological calculation---that of $\RP^\infty_{\HFtwo P}$---which exerts such enormous control over mod--$2$ cohomology itself (e.g., the entire structure of the dual Steenrod algebra).  This will turn out to be a surprisingly common occurrence as we progress.
 
 
 
